Primera entrega Elys

--- a/html/a1.html
+++ b/html/a1.html
@@ -75,7 +75,7 @@
             <img class="animated" ng-class="{zoomIn :a1Ctrl.estado2}" src="img/infografia1/e9.png" style="position: absolute;width: 140px;top: 630px;left: 410px; animation-delay: 2s;">
             <img class="animated" ng-class="{zoomIn :a1Ctrl.estado2}" src="img/infografia1/e10.png" style="position: absolute; top: 600px; left: 602px;width: 200px;animation-delay: 3s;">
             <img class="animated" ng-class="{fadeInLeft :a1Ctrl.estado2}" src="img/infografia1/e11.png" style="position:absolute; top:676px; left: 40px; width: 250px; animation-delay: 5s;">
-            <img class="animated" ng-class="{fadeInRight :a1Ctrl.estado2}" src="img/infografia1/e12.png" style="position: absolute; top: 894px; left: 379px; width: 461px; animation-delay: 5s;">
+            <img class="animated" ng-class="{fadeInRight :a1Ctrl.estado2}" src="img/infografia1/e12.gif" style="position: absolute; top: 894px; left: 379px; width: 461px; animation-delay: 5s;">
             <img class="animated" ng-class="{zoomIn :a1Ctrl.estado2}" src="img/infografia1/e13.png" style="position: absolute; top: 935px; left: 50px; width: 268px; animation-delay: 7s;">
             <span class="glyphicon glyphicon-menu-up nav-infografia" ng-click="a1Ctrl.saltaSlide([600,0,1])"></span>
             <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="a1Ctrl.saltaSlide([600,1200,3])"></span>
