--- a/html/b1.html
+++ b/html/b1.html
@@ -68,7 +68,7 @@
             <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="b1Ctrl.saltaSlide([0,600,2])"></span>
         </div>
         <div id="pag2" class="pag">
-            <img class="animated" ng-class="{fadeInLeft :b1Ctrl.estado2}" src="img/infografia2/e6.png" style="position: absolute; top: 640px; left: 40px; width: 315px; z-index: 1; animation-delay: .5s;">
+            <img class="animated" ng-class="{fadeInLeft :b1Ctrl.estado2}" src="img/infografia2/e6.gif" style="position: absolute; top: 640px; left: 40px; width: 315px; z-index: 1; animation-delay: .5s;">
             <img class="animated" ng-class="{fadeInRight :b1Ctrl.estado2}" src="img/infografia2/e7.png" style="position: absolute; top: 730px; left: 285px; width: 515px; animation-delay: 1s;}">
             <span class="glyphicon glyphicon-menu-up nav-infografia" ng-click="b1Ctrl.saltaSlide([600,0,1])"></span>
             <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="b1Ctrl.saltaSlide([600,1200,3])"></span>
