--- a/html/c1.html
+++ b/html/c1.html
@@ -56,7 +56,7 @@
 </style>
 
 <div class="animated zoomIn" style="height: 600px;">
-    <a href="#/home/b" class="cerrar">X</a>
+    <a href="#/home/c" class="cerrar">X</a>
     <div id="infografia">
         <div id="pag1" class="pag">
 
