--- a/html/c2.html
+++ b/html/c2.html
@@ -49,11 +49,11 @@
 </style>
 
 <div class="animated zoomIn" style="height: 600px;">
-    <a href="#/home/a" class="cerrar">X</a>
+    <a href="#/home/c" class="cerrar">X</a>
     <div id="video">
         <video controls width="900" height="600">
-            <source src="video/PT1.v1.mp4" type="video/mp4">
-            <source src="video/PT1.v1.ogg" type="video/ogg">
+            <source src="video/PT3.v1.mp4" type="video/mp4">
+            <source src="video/PT3.v1.ogg" type="video/ogg">
             Your browser does not support the video tag.
         </video>
     </div>
