--- a/html/d1.html
+++ b/html/d1.html
@@ -61,7 +61,7 @@
     <div id="infografia">
         <div id="pag1" class="pag">
 
-            <img class="animated" ng-class="{flipInX :d1Ctrl.estado1}" src="img/infografia4/e1.png" style="position: absolute;width: 430px;top:40px;left: 170px; animation-delay: 1s;">
+            <img class="animated" ng-class="{flipInX :d1Ctrl.estado1}" src="img/infografia4/d1.png" style="position: absolute;width: 430px;top:40px;left: 170px; animation-delay: 1s;">
             <img class="animated" ng-class="{zoomIn :d1Ctrl.estado1}" src="img/infografia4/e2.png" style="position: absolute;width: 170px;top: 65px;left: 95px; animation-delay: 1.5s;">
             <img class="animated" ng-class="{zoomIn :d1Ctrl.estado1}" src="img/infografia4/e3.png" style="position: absolute; width: 270px; top: 150px; left: 585px; animation-delay: 2s;">
             <img class="animated" ng-class="{fadeInLeft :d1Ctrl.estado1}" src="img/infografia4/e4.png" style="position: absolute;width: 460px;top: 180px;left: 100px; animation-delay: 2.5s;">
@@ -73,21 +73,21 @@
             <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/e7.png" style="position: absolute;width: 159px; top: 650px; left: 683px; animation-delay: 3s;">
             <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/e8.png" style="position: absolute;width: 155px; top: 801px; left: 143px; animation-delay: 3s;">
             <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/e9.png" style="position: absolute;width: 107px; top: 780px; left: 288px; animation-delay: 3s;">
-            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/e10.png" style="position: absolute;width: 130px; top: 820px; left: 376px; animation-delay: 3s;">
-            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/e11.png" style="position: absolute;width: 90px; top: 810px; left: 510px; animation-delay: 3s;">
-            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/e12.png" style="position: absolute;width: 100px; top: 837px; left: 593px; animation-delay: 3s;">
-            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/e13.png" style="position: absolute;width: 263px; top: 900px; left: 32px; animation-delay: 3s;">
-            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/e14.png" style="position: absolute;width: 400px; top: 996px; left: 305px; animation-delay: 3s;">
-            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/e15.png" style="position: absolute;width: 140px; top: 1050px; left: 690px; animation-delay: 3s;z-index: 1;">
+            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/d10.png" style="position: absolute;width: 130px; top: 820px; left: 376px; animation-delay: 3s;">
+            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/d11.png" style="position: absolute;width: 90px; top: 810px; left: 510px; animation-delay: 3s;">
+            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/d12.png" style="position: absolute;width: 100px; top: 837px; left: 593px; animation-delay: 3s;">
+            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/d13.png" style="position: absolute;width: 263px; top: 900px; left: 32px; animation-delay: 3s;">
+            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/d14.png" style="position: absolute;width: 400px; top: 996px; left: 305px; animation-delay: 3s;">
+            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/d15.png" style="position: absolute;width: 140px; top: 1050px; left: 690px; animation-delay: 3s;z-index: 1;">
             <span class="glyphicon glyphicon-menu-up nav-infografia" ng-click="d1Ctrl.saltaSlide([600,0,1])"></span>
             <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="d1Ctrl.saltaSlide([600,1200,3])"></span>
 
         </div>
         <div id="pag3" class="pag">
-            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/e17.png" style="position: absolute;width: 685px; top: 1234px; left: 105px; animation-delay: 3s;">
-            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/e16.png" style="position: absolute;width: 490px; top: 1205px; left: 180px; animation-delay: 3s;">
-            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/e18.png" style="position: absolute;width: 295px; top: 1303px; left: 295px; animation-delay: 3s;">
-            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/e19.png" style="position: absolute;width: 80px; top: 1315px; left: 180px; animation-delay: 3s;">
+            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/d17.png" style="position: absolute;width: 685px; top: 1234px; left: 105px; animation-delay: 3s;">
+            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/d16.png" style="position: absolute;width: 490px; top: 1205px; left: 180px; animation-delay: 3s;">
+            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/d18.png" style="position: absolute;width: 295px; top: 1303px; left: 295px; animation-delay: 3s;">
+            <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/d19.png" style="position: absolute;width: 80px; top: 1315px; left: 180px; animation-delay: 3s;">
             <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/e20.png" style="position: absolute;width: 75px; top: 1390px; left: 240px; animation-delay: 3s;">
             <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/e21.png" style="position: absolute;width: 45px; top: 1396px; left: 382px; animation-delay: 3s;">
             <img class="animated" ng-class="{fadeInLeft  :d1Ctrl.estado1}" src="img/infografia4/e22.png" style="position: absolute;width: 45px; top: 1393px; left: 543px; animation-delay: 3s;">
