--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
         <script src="js/controllers/A3Controller.js"></script>
         <script src="js/controllers/BController.js"></script>
         <script src="js/controllers/B1Controller.js"></script>
+        <script src="js/controllers/B3Controller.js"></script>
         <script src="js/controllers/CController.js"></script>
         <script src="js/controllers/C1Controller.js"></script>
+        <script src="js/controllers/C3Controller.js"></script>
         <script src="js/controllers/DController.js"></script>
         <script src="js/controllers/D1Controller.js"></script>
+        <script src="js/controllers/EController.js"></script>
+        <script src="js/controllers/E1Controller.js"></script>
     </body>
 </html>
