--- a/html/b3.html
+++ b/html/b3.html
@@ -60,10 +60,10 @@
     }
 </style>
 <div class="animated zoomIn" style="height: 600px;">
-    <a href="#/home/a" class="cerrar">X</a>
+    <a href="#/home/b" class="cerrar">X</a>
     <div id="actividad">
         <div class="pag">
-            <div ng-hide="a3Ctrl.acierto">
+            <div ng-hide="b3Ctrl.acierto">
                 <div class="col-md-12">
                     <video width="420" height="340" controls>
                         <source src="video/PT1.v1.mp4" type="video/mp4">
@@ -73,16 +73,16 @@
                 </div>
                 <div class="col-md-12">
                     <div style="width: 80%;position: relative;margin: 35px auto;">
-                        <h4>{{a3Ctrl.title}}</h4>
+                        <h4>{{b3Ctrl.title}}</h4>
                         <br>
                         <ul>
-                            <li ng-repeat="i in a3Ctrl.items" ng-click="a3Ctrl.validar($index)">{{i}}</li>
+                            <li ng-repeat="i in b3Ctrl.items" ng-click="b3Ctrl.validar($index)">{{i}}</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div ng-show="a3Ctrl.acierto">
-                <h1 style="text-align: center;line-height: 500px;">{{a3Ctrl.mensaje}}</h1>
+            <div ng-show="b3Ctrl.acierto">
+                <h1 style="text-align: center;line-height: 500px;">{{b3Ctrl.mensaje}}</h1>
             </div>
         </div>
     </div>
